tests/types_first/import_dynamic_dep.js
const x = require('./import_dynamic');
x.then(y => {
  y as empty; // error: number ~> empty
});
